# Conduit

./: .gitignore  CLAUDE.md  CMakeLists.txt  HANDOFF_RESULT.md  PLAN.md  STATUS.md
.claude/rules/: calibration.md  fx-chassis.md  grid.md  linkaudio.md  looper.md  midirig.md  node-editor.md  osc-remote.md  touchlive.md  transport.md  ui-design.md
.github/workflows/: ci.yml
Assets/: HardwareDevices.txt
Assets/ControllerProfiles/: AllenHeath_XoneK1.csv  Frontier_AlphaTrack.csv
Assets/svg-browser-icons/: README.md
Source/Core/: AudioDeviceController.cpp  CallbackTimingMonitor.h  CanvasGestureRecognizer.cpp  CanvasGestureRecognizer.h  CanvasViewport.h  CcControlModel.h  ChannelNames.cpp  ChannelNames.h  ControllerProfile.cpp  ControllerProfile.h  ControllerProfileLibrary.cpp  ControllerProfileLibrary.h  CurveEditInteraction.cpp  CurveEditInteraction.h  EngineEditor.cpp  EngineEditor.h  EngineProcessor.cpp  EngineProcessor.h  ExpressionAxis.cpp  ExpressionAxis.h  FigmaSnap.cpp  FigmaSnap.h  GraphManager.cpp  GraphManager.h  GridPanelSettings.cpp  GridPanelSettings.h  GridPhysics.cpp  GridPhysics.h  GridSensitivity.h  GridSessionStore.cpp  GridVoiceEngine.cpp  GridVoiceEngine.h  HardwareCcDatabase.cpp  HardwareCcDatabase.h  HardwarePresetLibrary.cpp  HardwarePresetLibrary.h  HardwarePresetScanner.cpp  HardwarePresetScanner.h  LaunchQuantization.h  LinkClock.cpp  (+58 more)
Source/DSP/Airwindows/: AirwindowsPlugin.h  AirwindowsRegistry.cpp  AirwindowsRegistry.h  CMakeLists.txt  PORTING_NOTES.md
Source/DSP/Airwindows/Plugins/: Air4.cpp  Air4.h  Cans.cpp  Cans.h  CansAW.cpp  CansAW.h  Chamber.cpp  Chamber.h  Console0Buss.cpp  Console0Buss.h  Console0Channel.cpp  Console0Channel.h  ConsoleLABuss.cpp  ConsoleLABuss.h  ConsoleMCBuss.cpp  ConsoleMCBuss.h  DeBess.cpp  DeBess.h  DeBez.cpp  DeBez.h  DeRez3.cpp  DeRez3.h  DigitalBlack.cpp  DigitalBlack.h  Discontapeity.cpp  Discontapeity.h  Distance3.cpp  Distance3.h  DubSub2.cpp  DubSub2.h  Dubly3.cpp  Dubly3.h  FatEQ.cpp  FatEQ.h  Flutter2.cpp  Flutter2.h  Galactic.cpp  Galactic.h  Gatelope.cpp  Gatelope.h  (+68 more)
Source/Interfaces/: ILinkAudioClient.h  IStochastic.h  IVoiceSink.h
Source/Modules/: AirwindowsAir4Module.cpp  AirwindowsAir4Module.h  AirwindowsCansAWModule.cpp  AirwindowsCansAWModule.h  AirwindowsCansModule.cpp  AirwindowsCansModule.h  AirwindowsChamberModule.cpp  AirwindowsChamberModule.h  AirwindowsConsole0BussModule.cpp  AirwindowsConsole0BussModule.h  AirwindowsConsole0ChannelModule.cpp  AirwindowsConsole0ChannelModule.h  AirwindowsConsoleLABussModule.cpp  AirwindowsConsoleLABussModule.h  AirwindowsConsoleMCBussModule.cpp  AirwindowsConsoleMCBussModule.h  AirwindowsDeBessModule.cpp  AirwindowsDeBessModule.h  AirwindowsDeBezModule.cpp  AirwindowsDeBezModule.h  AirwindowsDeRez3Module.cpp  AirwindowsDeRez3Module.h  AirwindowsDensityModule.cpp  AirwindowsDensityModule.h  AirwindowsDigitalBlackModule.cpp  AirwindowsDigitalBlackModule.h  AirwindowsDiscontapeityModule.cpp  AirwindowsDiscontapeityModule.h  AirwindowsDistance3Module.cpp  AirwindowsDistance3Module.h  AirwindowsDubSub2Module.cpp  AirwindowsDubSub2Module.h  AirwindowsDubly3Module.cpp  AirwindowsDubly3Module.h  AirwindowsFatEQModule.cpp  AirwindowsFatEQModule.h  AirwindowsFlutter2Module.cpp  AirwindowsFlutter2Module.h  AirwindowsGalacticModule.cpp  AirwindowsGalacticModule.h  (+90 more)
Source/TouchLive/: AbletonParamTarget.cpp  AbletonParamTarget.h  IRemoteTransport.h  LiveSetModel.cpp  LiveSetModel.h  LiveSpectrumTap.h  TouchLiveClient.cpp  TouchLiveClient.h  TouchLiveMeterBus.h  TouchLiveSettings.cpp  TouchLiveSettings.h
Source/UI/: AnimatedValue.h  CaptureAllButton.cpp  CaptureAllButton.h  CapturePanel.cpp  CapturePanel.h  CaptureSettingsComponent.cpp  CaptureSettingsComponent.h  CaptureToast.cpp  CaptureToast.h  CcControlLayer.cpp  CcControlLayer.h  ChannelAttributePanel.cpp  ChannelAttributePanel.h  ChordMemoryStrip.cpp  ChordMemoryStrip.h  ColourSwatchStrip.cpp  ColourSwatchStrip.h  ConduitColorPicker.cpp  CurveEditor.cpp  CurveEditor.h  CurveEditorTile.cpp  CurveEditorTile.h  CurvedSlider.h  DevPanel.cpp  DevPanel.h  DragCursorHider.h  ExpressionRibbon.cpp  ExpressionRibbon.h  FaderSlider.h  FxModulePanel.cpp  FxModulePanel.h  GainFaderMeter.cpp  GainFaderMeter.h  GridKeyboardComponent.cpp  GridKeyboardComponent.h  GridPage.cpp  GridPage.h  GridSettingsView.cpp  GridSettingsView.h  InputSendButton.cpp  (+82 more)
Source/Util/: CcNames.h  RtAllocationGuard.cpp  RtAllocationGuard.h  SpscQueue.h
Tests/Core/: AirwindowsModuleTests.cpp  AudioDeviceControllerTests.cpp  BarSampleAnchorsTests.cpp  CallbackTimingMonitorTests.cpp  CanvasViewportTests.cpp  CaptureBufferTests.cpp  CaptureMeterTests.cpp  CaptureSettingsTests.cpp  CaptureStressTests.cpp  CaptureWriterTests.cpp  ChannelNamesTests.cpp  ControllerProfileLibraryTests.cpp  ControllerProfileTests.cpp  CurveEditInteractionTests.cpp  DsiSysexTests.cpp  EngineIOChannelTests.cpp  ExpressionAxisTests.cpp  FakeVoiceSink.h  FigmaSnapTests.cpp  GraphManagerTests.cpp  GridPhysicsTests.cpp  GridSensitivityTests.cpp  GridVoiceEngineTests.cpp  HardwareCcDatabaseTests.cpp  HardwarePresetScannerTests.cpp  InputLinkSendTests.cpp  LaunchQuantizationTests.cpp  LevelMeterTests.cpp  LinkAudioSendTests.cpp  LinkReceiveStreamTests.cpp  LinkSendTapsTests.cpp  LooperBankTests.cpp  LooperClipMathTests.cpp  LooperEngineTests.cpp  LooperSessionModelTests.cpp  LooperSettingsTests.cpp  LooperSourceTests.cpp  LooperTrashTests.cpp  LooperWaveformTapTests.cpp  MacroBindingsTests.cpp  (+24 more)
Tests/TouchLive/: LiveSetModelTests.cpp  TouchLiveClientTests.cpp
Tests/UI/: BrowserPanelTests.cpp  ConduitColorPickerTests.cpp  FxModulePanelTests.cpp  GridKeyboardTests.cpp  LinkAudioReceivePanelTests.cpp  LooperPageTests.cpp  LooperWaveformStripTests.cpp  NodeCanvasTests.cpp  NoteCircleFadeTrackerTests.cpp  NumberFieldBracketTests.cpp  OscSettingsComponentTests.cpp  (+5 more)
docs/: Build.md  Calibration.md  DataModel.md  FxChassis.md  Grid.md  GridPlayTargets-M0.md  GridPlayTargets-Masterplan.md  LinkAudio.md  Looper.md  MidiRig.md  NodeEditor.md  PatchEngine.md  Roadmap.md  TouchLive.md
(+172 files in other folders)
